--- a/board-project-admin/src/main/resources/application.yml
+++ b/board-project-admin/src/main/resources/application.yml
@@ -1,5 +1,22 @@
 debug: false
-management.endpoint.web.exposure.include: "*" # actuator 관련 설정이다. 모든 endPoint를 보겠다는 것이다.
+management:
+  endpoints:
+    enabled-by-default: false # 1. Endpoint all disable
+    jmx:
+      exposure:
+        exclude: *
+    web:
+      exposure:
+        include: info, health
+  endpoint:
+    info:
+      enabled: true # 2. Enable specific endpoints
+    health:
+      enabled: true
+#    web:
+#      base-path: #[/변경된 경로]
+#  server:
+#    port: #포트번호
 
 logging:
   level:
