--- a/board-project-admin/src/main/resources/application.yml
+++ b/board-project-admin/src/main/resources/application.yml
@@ -24,6 +24,7 @@ spring:
     properties:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
+      hibernate.highlight_sql: true # 쿼리를 보기쉽게 하이라이트를 설정한다.
   sql.init.mode: always
   thymeleaf3.decoupled-logic: true
   security:
@@ -35,7 +36,7 @@ spring:
             client-secret: ${KAKAO_OAUTH_CLIENT_SECRET}
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
-            client-authentication-method: POST
+            client-authentication-method: none
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
