1. 버전변경으로 인한 코드수정

--- a/board-project-admin/src/main/resources/application.yml
+++ b/board-project-admin/src/main/resources/application.yml
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include: "*"
 
 logging:
   level:
-    com.fastcampus.projectboardadmin: debug
+    com.fastcampus.boardprojectadmin: debug
     org.springframework.web.servlet: debug
     org.hibernate.type.descriptor.sql.BasicBinder: trace
     org.springframework.web.client.RestTemplate: debug
